reportes de cliente creados

--- a/Forms Modules/frmsAnaliticas/reportes/frmReporteInventario.resx
+++ b/Forms Modules/frmsAnaliticas/reportes/frmReporteInventario.resx
@@ -321,9 +321,6 @@
   <data name="&gt;&gt;dgvInventarioReporte.ZOrder" xml:space="preserve">
     <value>10</value>
   </data>
-  <metadata name="AnaliticaReporteInventarioDAOBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <data name="Label8.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -582,17 +579,20 @@
   <data name="&gt;&gt;btnEliminarFiltros.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <metadata name="AnaliticaReporteInventarioDAOBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>39</value>
   </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>1209, 651</value>
+  </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>frmReporteInventario</value>
