--- a/Forms Modules/frmsAyuda/frmAyudaPagoPromociones.resx
+++ b/Forms Modules/frmsAyuda/frmAyudaPagoPromociones.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Label5.Text" xml:space="preserve">
+    <value>Respuesta: Durante el proceso de pago, encontrarás un campo para ingresar códigos de descuento. Introduce tu código y haz clic en "Aplicar" para disfrutar de descuentos especiales en tu pedido. Asegúrate de ingresar el código correctamente para que sea válido.</value>
+  </data>
 </root>
